--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ button {
     height: 100px;
     border-radius: 7px;
     font-size: 32px;
+    background-color: bisque;
 }
 
 button:hover {
@@ -48,4 +49,8 @@ button:hover {
 
 #sp {
     width: 200px;
+}
+
+#btnac, #backspace {
+    background-color: chocolate;
 }
